--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
