--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/form-data": "^2.5.2"
   }
 }
